website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.1.1/guides/docs/docs-create-doc.mdx
---
id: create-doc
description: Create a Markdown Document
slug: /create-doc
---

# 创建文档

创建一个名为 `greeting.md` 的 Markdown 文件，并将其放置在 `docs` 目录下。

```bash
website # root directory of your site
├── docs
│   └── greeting.md
├── src
│   └── pages
├── docusaurus.config.js
├── ...
```

```md
---
description: Create a doc page with rich content.
---

# Hello from Docusaurus

Are you ready to create the documentation site for your open source project?

## Headers

will show up on the table of contents on the upper right

So that your users will know what this page is all about without scrolling down or even without reading too much.

## Only h2 and h3 will be in the TOC by default.

You can configure the TOC heading levels either per-document or in the theme configuration.

The headers are well-spaced so that the hierarchy is clear.

- lists will help you
- present the key points
- that you want your users to remember
  - and you may nest them
    - multiple times
```

:::note

默认情况下，`docs` 目录下所有以下划线 (`_`) 开头的文件会被视为"局部"页面并被忽略。

了解更多关于[导入局部页面](../markdown-features/markdown-features-react.mdx#importing-markdown)的信息。

:::

## 文档 Front Matter {#doc-front-matter}

[Front Matter](../markdown-features/markdown-features-intro.mdx#front-matter) 用于为文档页面提供额外的元数据。Front Matter 是可选的——即使没有它，Docusaurus 也能推断出所有必要的元数据。例如，下面介绍的[文档标签](#doc-tags)功能就需要使用 Front Matter。有关所有可能的字段，请参阅 [API 文档](../../api/plugins/plugin-content-docs.mdx#markdown-front-matter)。

## 文档标签 {#doc-tags}

你可以选择为文档页面添加标签，这将在[文档侧边栏](./sidebar/index.mdx)之外引入另一种分类维度。标签以标签列表的形式在 Front Matter 中传递：

```md "your-doc-page.md"
---
id: doc-with-tags
title: A doc with tags
tags:
  - Demo
  - Getting started
---
```

:::tip

标签也可以使用 `tags: [Demo, Getting started]` 的形式声明。

了解更多关于 [Yaml 数组语法](https://www.w3schools.io/file/yaml-arrays/) 的所有可能形式。

:::

## 组织文件夹结构 {#organizing-folder-structure}

`docs` 文件夹下的 Markdown 文件排列方式可能会对 Docusaurus 的内容生成产生多种影响。不过，大多数影响可以与文件结构解耦。

### 文档 ID {#document-id}

每个文档都有一个唯一的 `id`。默认情况下，文档 `id` 是相对于根 docs 目录的文档名称（不带扩展名）。

例如，`greeting.md` 的 ID 是 `greeting`，而 `guide/hello.md` 的 ID 是 `guide/hello`。

```bash
website # Root directory of your site
└── docs
   ├── greeting.md
   └── guide
      └── hello.md
```

然而，`id` 的**最后一部分**可以由用户在 Front Matter 中定义。例如，如果 `guide/hello.md` 的内容如下定义，其最终的 `id` 将是 `guide/part1`。

```md
---
id: part1
---

Lorem ipsum
```

ID 用于在手动编写侧边栏时引用文档，或在使用与文档相关的布局组件或钩子时使用。

### 文档 URL {#doc-urls}

默认情况下，文档的 URL 位置是其相对于 `docs` 文件夹的文件路径。使用 `slug` Front Matter 可以更改文档的 URL。

例如，假设你的站点结构如下：

```bash
website # Root directory of your site
└── docs
    └── guide
        └── hello.md
```

默认情况下，`hello.md` 将在 `/docs/guide/hello` 路径下可用。你可以将其 URL 位置更改为 `/docs/bonjour`：

```md
---
slug: /bonjour
---

Lorem ipsum
```

`slug` 将被附加到文档插件的 `routeBasePath` 上，默认为 `/docs`。有关如何从 URL 中移除 `/docs` 部分，请参阅 [仅文档模式](docs-introduction.mdx#docs-only-mode)。

:::note

可以使用以下形式：

- 绝对 slug：`slug: /mySlug`、`slug: /`...
- 相对 slug：`slug: mySlug`、`slug: ./../mySlug`...

:::

如果你希望文档在根路径下可用，并拥有类似 `https://docusaurus.io/docs/` 的路径，可以使用 slug Front Matter：

```md
---
id: my-home-doc
slug: /
---

Lorem ipsum
```

### 侧边栏 {#sidebars}

当使用[自动生成侧边栏](./sidebar/autogenerated.mdx)时，文件结构将决定侧边栏的层级关系。

我们推荐的文件组织原则是：使文件系统与侧边栏结构保持一致（这样无需手动编写`sidebars.js`文件），并通过`slug`前置元数据来自定义每个文档的URL路径。