website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.2.1/guides/docs/docs-create-doc.mdx
---
id: create-doc
description: Create a Markdown Document
slug: /create-doc
---

# 创建文档

创建一个Markdown文件`greeting.md`，并将其放置在`docs`目录下。

```bash
website # root directory of your site
├── docs
│   └── greeting.md
├── src
│   └── pages
├── docusaurus.config.js
├── ...
```

```md
---
description: Create a doc page with rich content.
---

# Hello from Docusaurus

Are you ready to create the documentation site for your open source project?

## Headers

will show up on the table of contents on the upper right

So that your users will know what this page is all about without scrolling down or even without reading too much.

## Only h2 and h3 will be in the TOC by default.

You can configure the TOC heading levels either per-document or in the theme configuration.

The headers are well-spaced so that the hierarchy is clear.

- lists will help you
- present the key points
- that you want your users to remember
  - and you may nest them
    - multiple times
```

:::note

默认情况下，`docs`目录下所有以下划线(`_`)开头的文件会被视为"局部"页面并被忽略。

了解更多关于[导入局部页面的信息](../markdown-features/markdown-features-react.mdx#importing-markdown)。

:::

## 文档Front Matter {#doc-front-matter}

[Front Matter](../markdown-features/markdown-features-intro.mdx#front-matter)用于为文档页面提供额外的元数据。Front Matter是可选的——即使没有它，Docusaurus也能推断出所有必要的元数据。例如，下文介绍的[文档标签](#doc-tags)功能就需要使用Front Matter。所有可用字段请参阅[API文档](../../api/plugins/plugin-content-docs.mdx#markdown-front-matter)。

## 文档标签 {#doc-tags}

你可以选择为文档页面添加标签，这将在[文档侧边栏](./sidebar/index.mdx)之外提供另一种分类维度。标签以标签列表的形式在Front Matter中传递：

```md "your-doc-page.md"
---
id: doc-with-tags
title: A doc with tags
tags:
  - Demo
  - Getting started
---
```

:::tip

标签也可以声明为`tags: [Demo, Getting started]`。

了解更多[Yaml数组语法](https://www.w3schools.io/file/yaml-arrays/)。

:::

## 组织文件夹结构 {#organizing-folder-structure}

`docs`文件夹下Markdown文件的排列方式可能会对Docusaurus内容生成产生多种影响。不过，大多数影响可以与文件结构解耦。

### 文档ID {#document-id}

每个文档都有一个唯一的`id`。默认情况下，文档`id`是相对于docs根目录的文档名称（不含扩展名）。

例如，`greeting.md`的ID是`greeting`，而`guide/hello.md`的ID是`guide/hello`。

```bash
website # Root directory of your site
└── docs
   ├── greeting.md
   └── guide
      └── hello.md
```

但用户可以在Front Matter中自定义`id`的**最后部分**。例如，如果`guide/hello.md`的内容如下定义，其最终`id`将是`guide/part1`。

```md
---
id: part1
---

Lorem ipsum
```

在手动编写侧边栏或使用与文档相关的布局组件或钩子时，会使用该ID来引用文档。

### 文档URL {#doc-urls}

默认情况下，文档的URL位置是其相对于`docs`文件夹的文件路径，但有几种例外情况。具体来说，如果文件名属于以下情况之一，文件名将不会出现在URL中：

- 命名为`index`（不区分大小写）：`docs/Guides/index.md`
- 命名为`README`（不区分大小写）：`docs/Guides/README.mdx`
- 与父文件夹同名：`docs/Guides/Guides.md`

以上所有情况中，默认slug仅为`/Guides`，不包含`/index`、`/README`或重复的`/Guides`部分。

:::note

该约定与[分类索引约定](./sidebar/autogenerated.mdx#category-index-convention)完全相同。但`isCategoryIndex`配置不会影响文档URL。

:::

使用`slug` Front Matter可以修改文档的URL。

例如，假设你的站点结构如下：

```bash
website # Root directory of your site
└── docs
    └── guide
        └── hello.md
```

默认情况下，`hello.md` 将通过 `/docs/guide/hello` 路径访问。你可以将其 URL 路径修改为 `/docs/bonjour`：

```md
---
slug: /bonjour
---

Lorem ipsum
```

`slug` 会被追加到文档插件的 `routeBasePath`（默认为 `/docs`）之后。关于如何从 URL 中移除 `/docs` 部分，请参阅[纯文档模式](docs-introduction.mdx#docs-only-mode)。

:::note

支持以下两种 slug 格式：

- 绝对路径：`slug: /mySlug`、`slug: /`...
- 相对路径：`slug: mySlug`、`slug: ./../mySlug`...

:::

若需将文档置于根路径（如 `https://docusaurus.io/docs/`），可使用 slug 前置元数据：

```md
---
id: my-home-doc
slug: /
---

Lorem ipsum
```

### 侧边栏 {#sidebars}

使用[自动生成侧边栏](./sidebar/autogenerated.mdx)时，文件目录结构将决定侧边栏结构。

我们推荐的目录组织原则是：使文件系统与侧边栏结构保持一致（从而无需手动编写 `sidebars.js` 文件），并通过 `slug` 前置元数据来自定义每个文档的 URL。